# gamelabs

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/gamelabs/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ps1-bridge.cpp
app/src/main/java/com/example/gamelabs/: MainActivity.kt
app/src/main/java/com/example/gamelabs/data/: AndroidGameScanner.kt  GameScanner.kt  Ps1Bridge.kt
app/src/main/java/com/example/gamelabs/model/: Console.kt  Game.kt  RetroInput.kt
app/src/main/java/com/example/gamelabs/screen/: AndroidGamesScreen.kt  AndroidLauncherScreen.kt  GamesScreen.kt  HomeScreen.kt  Ps1EmulatorScreen.kt  Ps2EmulatorScreen.kt  PspEmulatorScreen.kt  SettingsScreen.kt
app/src/main/java/com/example/gamelabs/service/: OverlayService.kt
app/src/main/java/com/example/gamelabs/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/gamelabs/util/: FolderManager.kt  JoystickUtils.kt
app/src/main/res/layout/: overlay_button.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: device_filter.xml  file_paths.xml
app/src/test/java/com/example/gamelabs/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
